--- a/ClientWindow/Form2.resx
+++ b/ClientWindow/Form2.resx
@@ -117,4 +117,94 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICYAAAEAIADAEwAAFgAAACgAAAAgAAAATAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADIAAACCAAAAXQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcgAAALoAAADQAAAAIwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABNAAAAVwAA
+        AK4AAAAbAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AG0AAAA7AAAASgAAABoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAABTAAAAhgAAAJMAAACTAAAAJwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAGwAAAHoAAACPAAAA3wAAAOMAAABkAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAB3AAAAswAAANYAAADIAAAA6wAAAJoAAAAlAAAADAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAADIAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAARQAAAJcAAAClAAAA1AAAAI0AAAC0AAAA4wAAAF4AAAAsAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD8AAABQAAAAEQAAAAAAAAAAAAAAAAAAAFYAAADfAAAA5wAA
+        AIcAAABIAAAASgAAAE8AAABTAAAAVgAAAHkAAAC7AAAAyAAAAMcAAACNAgICbQAAAHgAAACWAAAAdQAA
+        AEsAAAA4AAAAMAAAADkAAABHAAAASAAAAEQAAABYAAAAzAAAAMYAAAB4AAAABgAAAAAAAAAAAAAAQQAA
+        AGsAAADIAAAA/AAAAOgAAADhAAAA2gAAANUAAADAAAAA6gAAANoTExPWXV1d0pqamtGzs7PYt7e3yLKy
+        splqampzAAAAJQAAADgAAABBAAAAVAAAAGMAAABwAAAAdwAAAEkAAACKAAAAgQAAAHkAAAAAAAAAAAAA
+        AAAAAAAAAAAAJAAAAJ4AAAD2AAAA4QAAAOcAAADjAAAA4QAAANIAAADBXV1d1bKysv329vb/////////
+        /////////v7+/+jo6PfJycmoNTU1fAAAAJQAAADXAAAAwwAAANwAAADWAAAAVgAAAHsAAAA+AAAAEAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAFwAAALoAAAD0AAAA7gAAAMcAAADqAAAAyXNzc8zc3Nz/////////
+        ///////////////////////////////////Ly8vHLS0tlgAAAMoAAACRAAAAyQAAAKgAAABjAAAAPwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAYAAAAPUAAAD7AAAA4gAAAMdCQkLGxMTE/+bm
+        5v/19fX/8/Pz/+np6f/s7Oz/6+vr//Dw8P/x8fH/6urq/+jo6P+3t7e9AAAAqwAAAMcAAADaAAAAcwAA
+        AEAAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAqwAAAPcAAADyAAAAv4uL
+        i/uSkZH/TExM/2FhYf9bW1v/PT09/1JSUv9VVVX/UVFR/1hYWP9aWlr/cHBw/9DQ0P9KSkqxAAAAvQAA
+        AKgAAABFAAAALgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABRAAAA6AAA
+        ANQeHh7Czs7O/4qJif8/Pz//RkZG/2VlZf80NDT/RkZG/zw8PP8wMDD/SEhI/zY1Nf9GRkb/4+Pj/4eH
+        h9UAAAC4AAAAZwAAACMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAQAAAClAAAA1jMzM9rm5ub/hIOD/zExMf9eXl7/i4uL/6Kiov9tbW3/SEhH/4ODg/+fn5//m5ub/6Cg
+        oP/n5+f/pqam7AMDA5sAAAA1AAAAFwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAJEAAADeNzc34+3t7f/R0dH/rq2t/+Lh4f/c3Nz/5OTk/8rKyv+7u7v/8vLy////
+        //////////////////+wsLDvBwcHhAAAAEEAAAAYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAhAAAApQAAAM4mJibi4ODg///////V1dX/pqam/4eHh/9qamr/srKy/52d
+        nf+rq6v/qamp/62trf/y8vL//////5iYmOQAAACTAAAAWQAAAEQAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAH0AAADKAAAA1woKCuStra3//////6+urv8gICD/S0pK/yws
+        LP9OTk7/JCQk/0VFRf86Ojr/SUlJ/+Hh4f/4+Pj/bGxsxQAAAJAAAABlAAAAYAAAABQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA1AAAAsAAAALMAAADkAAAA6WJiYvf4+Pj/mpmZ/zk5
+        Of9jY2P/QkJC/29vb/9HR0f/WFhY/zo6Ov9aWlr/5+fn/7W1tf8eHh6nAAAAwAAAALAAAACJAAAAZgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAI8AAAC/AAAAyAAAANkAAADZBwcHwJWV
+        lf+ko6P/T09P/7W1tf/g4OD/9fX1/+Dg4P/m5ub/4uLi/+Hh4f/d3d3/b29vuQAAAKkAAADWAAAApwAA
+        AGAAAABUAAAAIgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABUAAABWAAAAvgAAAMMAAACzAAAAeAAA
+        AL4AAACPKSkpq5OTk//k5OT/////////////////////////////////0NDQ+3d3d8UAAACZAAAAzwAA
+        AMcAAADXAAAAvwAAAE4AAAA3AAAAEwAAAAAAAAAAAAAAAAAAAAAAAAA2AAAAugAAAOkAAADoAAAA8AAA
+        AOgAAADWAAAA8QAAANsAAABaCgoKjWdnZ+G2trbr5ubm8/X19fLs7Oz30NDQ95GRketOTk6gAAAAeQAA
+        AJsAAAC4AAAAwgAAALIAAACYAAAAMwAAAGEAAAC2AAAAVwAAAAAAAAAAAAAAAAAAAGQAAADEAAAA8AAA
+        AMsAAADAAAAAwwAAAMUAAADJAAAAvQAAAGYAAAAsAAAAPhAQEG80NDSYQ0NDojw8PKUjIyOPAAAAjAAA
+        ACYAAAAiAAAAKAAAAGoAAACdAAAAfAAAAEUAAAAuAAAAlQAAAL4AAAC7AAAAEwAAAAAAAAAAAAAAKAAA
+        AEIAAABzAAAAJQAAAAsAAAALAAAADQAAAA8AAAATAAAAKAAAAD0AAABQAAAAbAAAAEYAAABgAAAAmQAA
+        ALsAAAB4AAAAJwAAACAAAAAHAAAAEQAAAA8AAAANAAAACQAAAA4AAABMAAAAcAAAAH8AAAADAAAAAAAA
+        AAAAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADQAAADkAAACFAAAAtgAA
+        AJ4AAADHAAAAsgAAADcAAAAZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAcAAAAAwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOwAA
+        AGgAAACUAAAAgAAAAMAAAABiAAAAHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAABAAAANQAAAHUAAADLAAAAnQAAACYAAAAbAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAkAAAAJwAAAFIAAABBAAAAHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAApAAAALgAAAEoAAAAMAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAIIAAAC/AAAA1wAAACAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPQAAAGoAAACbAAAAEgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAADQAA
+        ABwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA////////////////////////f////z////+//////////j////4////8H///+B//4/Df8/AA
+        H/PwAAQf+AAAH/wAAD/8AAA//gAAf/4AAH/+AAB//gAAf/4AAH/8AAAf+AAAP/iAAB/gEAQb4B4Pcf//
+        n////B////4/////P//////////////+P////7////////////8=
+</value>
+  </data>
 </root>
